fix: image overflow

--- a/src/index.css
+++ b/src/index.css
@@ -142,22 +142,31 @@ section {
 }
 
 .center-content {
+    margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 .home--hotel-image {
-    height: 20rem;
+    max-height: 20rem;
+    max-width: 100vw;
 }
 .center-content {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 3rem;
+    /*margin: 3rem;*/
+    /*margin: 3rem;*/
 }
 .home--the-wedding-image {
     height: 40rem;
     margin-bottom: 5rem;
+}
+
+.image-container {
+    overflow: hidden;
+    width: 100vw;
+    height: 100%;
 }
 
 .registration-key-search {
@@ -202,11 +211,11 @@ section {
 hr {
     opcaity: 0.6;
     width: 350px;
+    max-width: 80vw;
     height: .25rem;
     margin: 3rem auto;
     background-color:#666;
  }
-
 
 @media only screen and (max-width: 800px) {
     .title-home {
